# multi-agent-vlm-optimization-system

./: .gitignore  Makefile  README.md  SECURITY.md  STATUS.md  dashboard.py  metrics.db  operator_console.py  pyproject.toml  requirements-dev.txt
.github/workflows/: verify-schemas.yml
agents/: README.md  __init__.py  research_analyst.py  search_strategist.py
artifacts/: README.md  qwen25_vl_3b_fp16_mac_mini_20260520_155412.json  qwen25_vl_3b_fp16_mac_mini_20260520_160625.json  qwen25_vl_3b_fp16_mac_mini_20260520_161023.json  qwen25_vl_3b_fp16_mac_mini_20260520_161023_config.json
artifacts/clip_preds/: FastVLM-0.5B-iPhone-FP16_preds.json  LFM2-VL-450M_preds.json  MiniCPM-V-4.6_preds.json  Qwen2.5-VL-3B_preds.json  SmolVLM-500M_preds.json
artifacts/clip_preds_n50/: LFM2-VL-450M_preds.json  Qwen2.5-VL-3B_preds.json
artifacts/clip_scores/: FastVLM-0.5B-iPhone-FP16_clip.json  FastVLM-0.5B-iPhone-FP16_preds_clip.json  LFM2-VL-450M_preds_clip.json  MiniCPM-V-4.6_preds_clip.json  Qwen2.5-VL-3B_preds_clip.json  SmolVLM-500M_preds_clip.json
artifacts/clip_scores_n50/: LFM2-VL-450M_preds_clip.json  Qwen2.5-VL-3B_preds_clip.json
artifacts/device_ready/: 12d065239be5_ready.json  726c3ddeaed0_ready.json  7f6459c7074e_ready.json  LFM2-Q4KM_iphone16pro_20260605.json  SmolVLM-Q4K0_iphone16pro_20260605.json  a8d879818a18_ready.json  ccd9d9bca7d6_ready.json
artifacts/eval_task_2_2_20260525_094121/: FastVLM-0.5B_MMBench_DEV_EN.json  FastVLM-0.5B_MMBench_DEV_EN_config.json  FastVLM-0.5B_POPE.json  FastVLM-0.5B_POPE_config.json  FastVLM-0.5B_RealWorldQA.json  FastVLM-0.5B_RealWorldQA_config.json  LFM2-VL-450M_MMBench_DEV_EN.json  LFM2-VL-450M_MMBench_DEV_EN_config.json  LFM2-VL-450M_POPE.json  LFM2-VL-450M_POPE_config.json  LFM2-VL-450M_RealWorldQA.json  LFM2-VL-450M_RealWorldQA_config.json  MiniCPM-V-4.6_MMBench_DEV_EN.json  MiniCPM-V-4.6_MMBench_DEV_EN_config.json  MiniCPM-V-4.6_POPE.json  MiniCPM-V-4.6_POPE_config.json  MiniCPM-V-4.6_RealWorldQA.json  MiniCPM-V-4.6_RealWorldQA_config.json  MiniCPM-V-4_5_MMBench_DEV_EN.json  MiniCPM-V-4_5_MMBench_DEV_EN_config.json  MiniCPM-V-4_5_POPE.json  MiniCPM-V-4_5_POPE_config.json  MiniCPM-V-4_5_RealWorldQA.json  MiniCPM-V-4_5_RealWorldQA_config.json  Qwen2.5-VL-3B_MMBench_DEV_EN.json  Qwen2.5-VL-3B_MMBench_DEV_EN_config.json  Qwen2.5-VL-3B_POPE.json  Qwen2.5-VL-3B_POPE_config.json  Qwen2.5-VL-3B_RealWorldQA.json  Qwen2.5-VL-3B_RealWorldQA_config.json  SmolVLM-500M_MMBench_DEV_EN.json  SmolVLM-500M_MMBench_DEV_EN_config.json  SmolVLM-500M_POPE.json  SmolVLM-500M_POPE_config.json  SmolVLM-500M_RealWorldQA.json  SmolVLM-500M_RealWorldQA_config.json
artifacts/eval_task_3_2_20260605/: LFM2-VL-450M_iphone16pro_20260605.json
artifacts/eval_task_3_3_20260605/: FastVLM-0.5B_iphone16pro_20260605.json
artifacts/eval_task_3_4_20260605/: MiniCPM-V-4.6_iphone16pro_20260605.json  SmolVLM-500M_iphone16pro_20260605.json
artifacts/experiment_ledger/: construction_1507d3175ae9.json  construction_151cf686f7b8.json  construction_151cf686f7b8_s1.json  construction_151cf686f7b8_s2.json  construction_151cf686f7b8_s3.json  construction_55dcb001a24d.json  construction_55f7a8045fa2_s1.json  construction_55f7a8045fa2_s2.json  construction_55f7a8045fa2_s3.json  construction_b2feb6b16d7f.json  construction_d3423bc0155b.json  construction_df64c49bd7ef.json
artifacts/pareto/: pareto_frontier.json  pareto_history.json
configs/: run.example.yaml
datasets/: README.md
datasets/stage_a/: vqa.json  (+3 more)
docs/: PHASE2_WRITEUP.md  THIRD_PARTY.md  VLM_Optimization_DetailedPlan_Phase0.md  VLM_Optimization_DetailedPlan_Phase1.md  VLM_Optimization_DetailedPlan_Phase2.md  VLM_Optimization_Goals.md  VLM_Optimization_HLD.md  VLM_Optimization_PriorArt.md  phase0_retrospective.md
eval/: README.md  __init__.py
ios_harness/: GGUF_SETUP.md  README.md
pi_harness/: README.md
runners/: README.md  __init__.py  build_scienceqa_cache.py  build_student.py  compute_clip_score.py  eval_student.py  eval_vlmeval.py  export_student_mlx.py  finetune_vlm.py  generate_descriptions.py  measure_mac.py
schemas/: README.md  __init__.py  agent_decision.schema.json  agents.py  device_descriptor.schema.json  devices.py  experiment_config.schema.json  experiments.py  hypothesis_record.schema.json  metrics_report.schema.json  run_config.py  student_spec.schema.json  students.py
scripts/: convert_qwen25vl_gguf.sh  retest_task_2_1.sh  retest_task_2_2.sh  start_strategist_llm.sh
services/: README.md  __init__.py  approvals.py  console_chat.py  console_data.py  construction_loop.py  decision_dossier.py  distillation_pipeline.py  experiment_runner.py  gates.py  pareto_tracker.py  run_control.py  runlog.py
tests/: test_approvals.py  test_console_chat.py  test_console_data.py  test_construction_loop.py  test_device_configs.py  test_distill_balance.py  test_gates.py  test_rehearsal_mix.py  test_research_analyst.py  test_run_control.py  test_schemas.py  test_scienceqa_cache.py  test_search_strategist.py  test_seed.py  test_student_spec.py
tools/: README.md  __init__.py  build_metrics_db.py  build_vqa_from_coco.py  curate_eval_set.py  fetch_coco_subset.py  fetch_papers.py  hash_eval_set.py  smoke_test_models.py
(+84 files in other folders)
